k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: evershop
  namespace: resilientops
  labels:
    app: evershop

spec:
  replicas: 1

  selector:
    matchLabels:
      app: evershop

  template:
    metadata:
      labels:
        app: evershop

    spec:
      containers:
        - name: evershop

          image: 579661925683.dkr.ecr.ap-south-1.amazonaws.com/resilientops-evershop:1.0

          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "500m"
              memory: "1Gi"
