k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: evershop
  namespace: resilientops

spec:
  selector:
    app: evershop

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: LoadBalancer
