k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evershop-ingress
  namespace: resilientops
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:579661925683:certificate/c4007f3e-b048-43bc-b9b0-8f33f43122a4
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: evershop.riyaa.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evershop
                port:
                  number: 3000
